--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="app.css" />
     <script src="lib/angular/angular.js"></script>
-    <script src="app.js"></script>
-    <script src="phone-list.component.js"></script>
-    <script src="hello.component.js"></script>
+    <script src="app.module.js"></script>
+    <script src="phone-list/phone-list.module.js"></script>
+    <script src="phone-list/phone-list.component.js"></script>
+    <script src="hello/hello.module.js"></script>
+    <script src="hello/hello.component.js"></script>
   </head>
   <body>
     
