--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -1,9 +1,20 @@
-
-<h3>{{nombre}}</h3> 
-<ul>
-    <li ng-repeat="phone in $ctrl.phones">
-        <span>{{phone.name}}</span> 
-        <p>{{phone.snippet}}</p>
-    </li> 
-</ul>
-<p>Number: {{$ctrl.phones.length}}</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2">
+            <h3>{{nombre}}</h3> 
+            <p>Search: <input ng-model="$ctrl.query" /></p>
+        </div>
+        <div class="col-md-10">
+            
+            <span> Filtrando por {{$ctrl.query}}</span>
+            <ul>
+                <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query">
+                    <span>{{phone.name}}</span> 
+                    <p>{{phone.snippet}}</p>
+                </li> 
+            </ul>
+            <p>Number: {{$ctrl.phones.length}}</p>
+            <hello-all></hello-all>
+        </div>
+    </div>
+</div>
