--- a/app/hello/hello.template.html
+++ b/app/hello/hello.template.html
@@ -1,1 +1,15 @@
 <p>Hi ! componente helloAll {{$ctrl.usuario}} </p>
+
+<table>
+    <tr>
+      <th colspan="12">Tabla</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" >{{i}}</td>
+    </tr>
+    <tr ng-repeat="x in [1, 2, 3, 4, 5, 6, 7, 8, 9]">
+      <td>La de {{x}} </td>
+      <td ng-repeat="o in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9 , 10]" >{{ x * o}}</td>
+    </tr>
+</table>
