--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -22,6 +22,7 @@
             </ul>
             <p>Number: {{$ctrl.phones.length}}</p>
             <hello-all></hello-all>
+            <pre>{{$ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp | json}}</pre>
         </div>
     </div>
 </div>
