--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -11,18 +11,19 @@
                 </select>
             </p>
         </div>
-        <div class="col-md-10">
-            
+        <div class="col-md-10">            
             <span> Filtrando por {{$ctrl.query}}</span>
             <ul class="phones">
-                <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp">
-                    <span>{{phone.name}}</span> 
+                <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp" class="thumbnail">
+                    <a href="#!/phones/{{phone.id}}" class="thumb">
+                        <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
+                    </a>
+                    <a href="#!/phones/{{phone.id}}">{{phone.name}}</a>
                     <p>{{phone.snippet}}</p>
                 </li> 
             </ul>
             <p>Number: {{$ctrl.phones.length}}</p>
             <hello-all></hello-all>
-            <br />
             <pre>{{$ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp | json}}</pre>
         </div>
     </div>
