--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="app.css" />
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
+    <script src="lib/angular-route/angular-route.js"></script>
     <script src="app.module.js"></script>
+    <script src="app.config.js"></script>
     <script src="phone-list/phone-list.module.js"></script>
     <script src="phone-list/phone-list.component.js"></script>
     <script src="hello/hello.module.js"></script>
     <script src="hello/hello.component.js"></script>
+    <script src="phone-details/phone-details.module.js"></script>
+    <script src="phone-details/phone-details.component.js"></script>
   </head>
   <body>
-    
-    <phone-list></phone-list>
-    
+    <div ng-view></div>  
   </body>
 </html>
